# voice-training-tool

./: Cargo.toml  Info.plist  README.md  build.rs  bundle.sh
.github/workflows/: ci.yml  release.yml
src/: main.rs
