[package]
name = "voice_training_tool"
version = "0.2.0"
edition = "2024"

[dependencies]
eframe = { version = "0.35", default-features = false, features = ["glow", "default_fonts", "accesskit"] }
rodio = "0.22"
resvg = "0.47"
rand = "0.10"
directories = "6"
serde = { version = "1", features = ["derive"] }
toml = "1"
cpal = "0.18"

[build-dependencies]
ureq = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.10"
